modified oone div?

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset="UTF-8"/>
    <head>
-      <title>mikroformat</title>
+      <title>Testowanie rich snippets</title>
    </head>
 <body>
   <div id="hcard-Tomasz-Lelek" class="vcard">
